--- a/composer.json
+++ b/composer.json
@@ -7,8 +7,10 @@
   "authors": [
     {
       "name": "Ministry of Justice",
-      "email": "",
-      "homepage": "https://github.com/like-button-for-wordpress"
+      "homepage": "https://github.com/ministryofjustice/like-button-for-wordpress"
+    },
+    {
+      "name": "A Brown"
     }
   ],
   "keywords": [
@@ -18,10 +20,15 @@
     "issues": "https://github.com/ministryofjustice/like-button-for-wordpress/issues"
   },
   "require": {
-    "php": ">=5.6",
+    "php": ">=7.4",
     "composer/installers": "^1.4"
   },
   "extra" : {
     "installer-name": "like-button-for-wordpress"
+  },
+  "config": {
+    "allow-plugins": {
+      "composer/installers": true
+    }
   }
 }
